--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,26 +3,26 @@ orbs:
   node: circleci/node@4.7.0
 jobs:
   build:
-    working_directory: ~/../project
+    working_directory: ~/project
     docker:
       - image: circleci/node:12.22.1-browsers
     steps:
       - checkout
       - run:
           name: Set permissions for project directory
-          command: chmod -R 755 ~/../project
+          command: chmod -R 755 ~/project
       - run:
           name: Print working directory
           command: pwd
       - run:
           name: List files in project directory
-          command: ls ~/../project
+          command: ls ~/project
       - run:
           name: List file permissions in project directory
-          command: ls -la ~/../project
+          command: ls -la ~/project
       - run:
           name: Find package.json file
-          command: find ~/../project -name "package.json"
+          command: find ~/project -name "package.json"
       - run:
           name: Simulate package installation
           command: npm install --dry-run
